--- a/views/speedo.ejs
+++ b/views/speedo.ejs
@@ -20,29 +20,29 @@
     <nav class="navbar navbar-light bg-primary">
       <div class="container">
         <a class="navbar-brand" href="#"
-          ><h2><strong>Bowling</strong></h2></a
+          ><h2><strong>BowlSafe</strong></h2></a
         >
       </div>
     </nav>
 
     <div class="container">
-      <h1 class="pt-3">Shreeja</h1>
+      <h1 class="pt-3 text-secondary">Player1</h1>
     </div>
 
     <div class="container pt-3">
       <div class="row r">
         <div class="col-lg-4 d-flex flex-column justify-content-center">
-          <h3 class="pb-2">LRS&RRS vs LMB</h3>
+          <h3 class="pb-2 text-primary">LRS & RRS Vs LMB</h3>
           <canvas id="foo"></canvas>
         </div>
 
         <div class="col-lg-4 d-flex flex-column justify-content-center">
-          <h3>Hyperextension</h3>
+          <h3 class="text-primary">Hyper-Extension</h3>
           <canvas id="foo1"></canvas>
         </div>
 
         <div class="col-lg-4 d-flex flex-column justify-content-center">
-          <h3>Posteriorly Rotated</h3>
+          <h3 class="text-primary">Posteriorly Rotated</h3>
           <canvas id="foo2"></canvas>
         </div>
       </div>
