--- a/views/speedo.ejs
+++ b/views/speedo.ejs
@@ -3,47 +3,116 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Speed</title>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"
-    ></script>
+    <title>BowlSafe</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        height: 100vh;
+        font-family: "Nunito", sans-serif;
+        background-image: linear-gradient(
+            339deg,
+            rgba(47, 47, 47, 0.07) 0%,
+            rgba(47, 47, 47, 0.07) 42%,
+            transparent 42%,
+            transparent 99%,
+            rgba(17, 17, 17, 0.02) 99%,
+            rgba(17, 17, 17, 0.02) 100%
+          ),
+          linear-gradient(
+            257deg,
+            rgba(65, 65, 65, 0.02) 0%,
+            rgba(65, 65, 65, 0.02) 11%,
+            transparent 11%,
+            transparent 92%,
+            rgba(53, 53, 53, 0.02) 92%,
+            rgba(53, 53, 53, 0.02) 100%
+          ),
+          linear-gradient(
+            191deg,
+            rgba(5, 5, 5, 0) 0%,
+            rgba(5, 5, 5, 0) 1%,
+            transparent 1%,
+            transparent 45%,
+            rgba(19, 19, 19, 0.08) 45%,
+            rgba(19, 19, 19, 0.08) 100%
+          ),
+          linear-gradient(
+            29deg,
+            rgba(28, 28, 28, 0.07) 0%,
+            rgba(28, 28, 28, 0.07) 33%,
+            transparent 33%,
+            transparent 40%,
+            rgba(220, 220, 220, 0.09) 40%,
+            rgba(220, 220, 220, 0.09) 100%
+          ),
+          linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
+      }
+    </style>
     <!-- <script src="/public/assets/speed-data.js"></script> -->
   </head>
 
-  <body class="bg-light">
-    <nav class="navbar navbar-light bg-primary">
+  <body>
+    <nav class="navbar shadow-sm">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand text-primary" href="#"
           ><h2><strong>BowlSafe</strong></h2></a
         >
       </div>
     </nav>
 
     <div class="container">
-      <h1 class="pt-3 text-secondary">Player1</h1>
+      <h2 class="py-3 text-primary">Player1</h2>
     </div>
 
-    <div class="container pt-3">
-      <div class="row r">
-        <div class="col-lg-4 d-flex flex-column justify-content-center">
-          <h3 class="pb-2 text-primary">LRS & RRS Vs LMB</h3>
-          <canvas id="foo"></canvas>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="card shadow-lg bg-light text-center mb-3">
+            <div class="card-body">
+              <h5 class="card-title text-primary">LRS & RRS Vs LMB</h5>
+              <canvas id="foo"></canvas>
+              <div class="container-fluid">
+                <span class="badge badge-pill badge-success">Safe</span>
+                <span class="badge badge-pill badge-warning">Caution</span>
+                <span class="badge badge-pill badge-danger">Alert</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card shadow-lg bg-light text-center mb-3">
+            <div class="card-body">
+              <h5 class="card-title text-primary">Hyper-Extension</h5>
+              <canvas id="foo1"></canvas>
+              <div class="container-fluid">
+                <span class="badge badge-pill badge-success">Safe</span>
+                <span class="badge badge-pill badge-warning">Caution</span>
+                <span class="badge badge-pill badge-danger">Alert</span>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="col-lg-4 d-flex flex-column justify-content-center">
-          <h3 class="text-primary">Hyper-Extension</h3>
-          <canvas id="foo1"></canvas>
-        </div>
-
-        <div class="col-lg-4 d-flex flex-column justify-content-center">
-          <h3 class="text-primary">Posteriorly Rotated</h3>
-          <canvas id="foo2"></canvas>
+          <div class="card shadow-lg bg-light text-center mb-3">
+            <div class="card-body">
+              <h5 class="card-title text-primary">Posteriorly Rotated</h5>
+              <canvas id="foo2"></canvas>
+              <div class="container-fluid">
+                <span class="badge badge-pill badge-success">Safe</span>
+                <span class="badge badge-pill badge-warning">Caution</span>
+                <span class="badge badge-pill badge-danger">Alert</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
