--- a/views/phome.ejs
+++ b/views/phome.ejs
@@ -77,6 +77,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/report"
+              >Report <span class="sr-only">(current)</span></a
+            >
             <a class="nav-item nav-link active" href="/logout"
               >Logout <span class="sr-only">(current)</span></a
             >
